wiLink 1.1.1 (UNRELEASED)
 * Calls:
  - Add support for double NAT traversal using TURN.
 * Player:
  - Do not use app-wide network cache (fixes crash on account add/remove).
 * Telephone:
  - Fix STUN fallback port when SRV lookups are not available.

wiLink 1.1.0 (2011-02-21)
 * Conversations:
  - Recognise /me command.
  - Add optional sound notifications for incoming/outgoing messages.
 * Rooms:
   - Correctly parse multiple "status" elements in presences.
   - Fix tab completion with a leading "@" sign on OS X.
   - Do not steal focus when auto-joining rooms.
 * Preferences:
   - Move all options to a "preferences" dialog.
   - Add tab for sound preferences.
 * Shares:
   - Fix display of shared drives on Windows.
   - Do not re-send registration every minute.
 * Telephone:
   - Add support for SIP voice-over-IP calls.
 * Transfers:
   - Disable sending files to room members, it doesn't work.
   - Make sure transfer widgets are always visible.

wiLink 1.0.2 (2010-11-22)
 * Conversations:
   - Fix chat message ordering regression introduced in 1.0.0
   - Fix crash when clearing a conversation history with selected messages.
 * Roster:
   - Improve "My residence" icon.
 * Shares:
   - Fix shares download timeout handling.

wiLink 1.0.0 (2010-11-08)
 * Calls:
   - Make it possible to make calls to room members.
   - Display call information inside relevant chat window.
   - Move call data processing to a thread to avoid buffer underruns.
 * Conversations:
   - Add support for double and tripple click selection.
   - Calculate offset between server time and client time.
   - Make text selection more visible on Windows.
 * Chat rooms:
   - Display room subject and make it possible to change it.
   - When sending messages to a chat room, do not set "from".
   - Display image and profile links for room members.
   - Fix chat room bookmark management.
 * Diagnostics:
   - Report which standards WiFi interfaces support.
 * Menu: