@@ -3,6 +3,8 @@ wiLink 1.1.1 (UNRELEASED)
   - Add support for double NAT traversal using TURN.
  * Player:
   - Do not use app-wide network cache (fixes crash on account add/remove).
+ * Roster:
+  - Invalidate client capabilities when the verification string changes.
  * Telephone:
   - Fix STUN fallback port when SRV lookups are not available.
 
